<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ROS2_SU065_D4380_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yokowaiwai5757yy@gmail.com">yokoyamayy</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>sensor_msgs</exec_depend>

  <exec_depend>joy</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
